# QPipelinedStream

./: .gitignore
include/: QHttpHeader.h  QHttpMessage.h  QHttpMethod.h  QHttpObject.h  QHttpObjectDecoder.h  QHttpRequest.h  QHttpRequestDecoder.h  QHttpResponse.h  QHttpStatus.h  QHttpVersion.h  QStreamCodec.h  QStreamHandler.h
src/: QHttpMessage.cpp  QHttpObjectDecoder.cpp  QHttpRequest.cpp  QHttpRequestDecoder.cpp  QHttpResponse.cpp  QStream.h  QStreamDecoder.h  QStreamEncoder.h  QStreamHandler.h
src/http/: QFullHttpMessage.cpp  QFullHttpMessage.h  QFullHttpRequest.cpp  QFullHttpRequest.h  QFullHttpResponse.cpp  QFullHttpResponse.h  QHttpContent.cpp  QHttpContent.h  QHttpHeader.h  QHttpHeaders.cpp  QHttpHeaders.h  QHttpMessage.cpp  QHttpMessage.h  QHttpMethod.h  QHttpObject.h  QHttpObjectDecoder.cpp  QHttpObjectDecoder.h  QHttpObjectEncoder.cpp  QHttpObjectEncoder.h  QHttpRequest.cpp  QHttpRequest.h  QHttpRequestDecoder.cpp  QHttpRequestDecoder.h  QHttpRequestEncoder.cpp  QHttpRequestEncoder.h  QHttpResponse.cpp  QHttpResponse.h  QHttpResponseDecoder.cpp  QHttpResponseDecoder.h  QHttpResponseEncoder.cpp  QHttpResponseEncoder.h  QHttpStatus.h  QHttpTrailer.cpp  QHttpTrailer.h  QHttpVersion.h
tests/: CMakeLists.txt  colorize.cpp  test.cpp  test_http.cpp
